--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -233,28 +233,31 @@
         ตรวจปฏิบัติการ
         <i class="dropdown icon "></i>
         <div class="menu ">
-            <a class="item " *ngIf="authService.renderByPage('cop01/1')" [routerLink]="[ '/cop01/1'] " routerLinkActive="active ">จัดทำแผนการตรวจปฏิบัติการ
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop01/2')" [routerLink]="[ '/cop01/2'] " routerLinkActive="active ">ค้นหาแผนการตรวจสอบภาษี
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop02/1')" [routerLink]="[ '/cop02/1'] " routerLinkActive="active ">รวบรวมข้อมูลเพื่อเตรียมออกตรวจปฏิบัติการ
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop03/1')" [routerLink]="[ '/cop03/1'] " routerLinkActive="active ">จัดทำหนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ</a>
-            <a class="item " *ngIf="authService.renderByPage('cop03/1/1')" [routerLink]="[ '/cop03/1/1'] "
-                routerLinkActive="active ">ค้นหาหนังสือขออนนุมัติเดินทางไปราชการ
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">รายงานการตรวจปฏิบัติการ
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop04/1')" [routerLink]="[ '/cop04/1'] " routerLinkActive="active ">บันทึกผลการตรวจปฏิบัติการ
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop04/2')" [routerLink]="[ '/cop04/2'] " routerLinkActive="active ">ค้นหาบันทึกผลการตรวจปฏิบัติการ
-            </a>
-            <a class="item " *ngIf="authService.renderByPage('cop05/1')" [routerLink]="[ '/cop05/1'] " routerLinkActive="active ">รายงานผลการตรวจปฏิบัติการ
-            </a>  
-            <a class="item " *ngIf="authService.renderByPage('cop07/1')" [routerLink]="[ '/cop07/1'] " routerLinkActive="active ">แผนการตรวจปฏิบัติการประจำปีงบประมาณ
-            </a>
-
-        </div>
+                <!-- <a class="item " *ngIf="authService.renderByPage('cop01/1')" [routerLink]="[ '/cop01/1'] " routerLinkActive="active ">จัดทำแผนการตรวจปฏิบัติการ</a>
+                <a class="item " *ngIf="authService.renderByPage('cop01/2')" [routerLink]="[ '/cop01/2'] " routerLinkActive="active ">ค้นหาแผนการตรวจสอบภาษี</a>
+                <a class="item " *ngIf="authService.renderByPage('cop02/1')" [routerLink]="[ '/cop02/1'] " routerLinkActive="active ">รวบรวมข้อมูลเพื่อเตรียมออกตรวจปฏิบัติการ</a>
+                <a class="item " *ngIf="authService.renderByPage('cop03/1')" [routerLink]="[ '/cop03/1'] " routerLinkActive="active ">จัดทำหนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ</a>
+                <a class="item " *ngIf="authService.renderByPage('cop03/1/1')" [routerLink]="[ '/cop03/1/1'] " routerLinkActive="active ">ค้นหาหนังสือขออนนุมัติเดินทางไปราชการ</a> -->
+                <a class="item " *ngIf="authService.renderByPage('cop07/1')" [routerLink]="[ '/cop07/1'] " routerLinkActive="active ">แผนการตรวจปฏิบัติการประจำปีงบประมาณ</a>
+                <div class="ui dropdown item ">รายงานการตรวจปฏิบัติการ<i class="dropdown icon "></i>
+                        <div class="menu">
+    
+                            <a class="item " [routerLink]="['/cop06/1/1']">รายงานผลการตรวจปฏิบัติการการจ่ายวัตถุดิบ</a>
+                            <a class="item " [routerLink]="['/cop06/1/2']">รายงานผลการตรวจปฏิบัติการตรวจนับวัตถุดิบคงเหลือ</a>
+                            <a class="item " [routerLink]="['/cop06/3']">รายงานผลการตรวจปฏิบัติการรับสินค้าสำเร็จรูป</a>
+                            <a class="item " [routerLink]="['/cop06/3/1']">รายงานผลการตรวจปฏิบัติการจ่ายสินคาสำเร็จรูป</a>
+                            <a class="item " [routerLink]="['/cop06/4']">รายงานการตรวจปฏิบัติการตรวจสอบการลดหย่อนภาษี</a>
+    
+                        </div>
+                    </div>
+                <!-- <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">รายงานการตรวจปฏิบัติการ</a> -->
+                <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">สรุปผลการตรวจปฏิบัติการ</a>
+                <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/tax-audit-manage'] " routerLinkActive="active ">จัดทำหนังสือราชการ บันทึกข้อความ และแบบ ตส.ต่างๆ</a>
+                <!-- <a class="item " *ngIf="authService.renderByPage('cop04/1')" [routerLink]="[ '/cop04/1'] " routerLinkActive="active ">บันทึกผลการตรวจปฏิบัติการ</a>
+                <a class="item " *ngIf="authService.renderByPage('cop04/2')" [routerLink]="[ '/cop04/2'] " routerLinkActive="active ">ค้นหาบันทึกผลการตรวจปฏิบัติการ</a>
+                <a class="item " *ngIf="authService.renderByPage('cop05/1')" [routerLink]="[ '/cop05/1'] " routerLinkActive="active ">รายงานผลการตรวจปฏิบัติการ</a>   -->
+    
+            </div>
     </div>
 
     <!-- ///// START Menu Export Checking ///// -->
