--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
@@ -32,7 +32,7 @@
           </div>
           <div class="four wide field ">
             <select class="ui dropdown full-width" [(ngModel)]="model.year" name="year" id="year">
-              <option value="">เลือก</option>
+              <option value="">กรุณาเลือก</option>
               <option *ngFor="let item of yearList" value="{{item.value}}">{{item.label}}</option>
             </select>
           </div>
