--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -2,7 +2,7 @@
 <div class="ui grid">
     <div class="sixteen wide column">
         
-        <div class="ui top attached header segment">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>ค้นหารายการคุม KTB-Corporate</span>
         </div>
 
@@ -33,7 +33,7 @@
                 <!-- row 2 -->
                 <div class="inline fields  ui grid">
                     <div class="three wide field ">
-                        <label class="text-right full-width">สรรพสามิตพื้นที่สาขา</label>
+                        <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่สาขา</label>
                     </div>
                     <div class="four wide field ">
                         <select name="branch" id="branch" class="ui dropdown ai search full-width office">
