--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -60,7 +60,7 @@
                     <div class="four wide field ">
                         <div class="ui calendar full-width" id="dateF">
                             <div class="ui input left icon">
-                                <i class="clock icon"></i>
+                                <i class="calendar alter nate outline icon"></i>
                                 <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null"
                                     placeholder="วว/ดด/ปปปป" [attr.required]="true">
                             </div>
@@ -73,7 +73,7 @@
                         <div class="ui input">
                             <div class="ui calendar full-width" id="dateT">
                                 <div class="ui input left icon">
-                                    <i class="clock icon"></i>
+                                    <i class="calendar alter nate outline icon"></i>
                                     <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null"
                                         placeholder="วว/ดด/ปปปป" [attr.required]="true">
                                 </div>
@@ -96,7 +96,7 @@
     <table id="dataTable" class="ui small celled table striped selectable display nowrap" style="width: 100%;">
         <thead>
             <tr>
-                <th style="text-align: center !important">ลำดับ</th>
+                <th style="text-align: center !important">ลำดับที่</th>
                 <th style="text-align: center !important">วันที่สั่งจ่าย</th>
                 <th style="text-align: center !important">เช็คเล่มที่</th>                      
                 <th style="text-align: center !important">ชื่อธนาคาร</th>     
