updated export check (epa)

--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-2/epa01-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-2/epa01-2.component.html
@@ -15,19 +15,20 @@
     </div>
   </div>
   <div class="ui form">
+    <input type="hidden" value="searchFlag">
     <div class="inline fields">
       <div class="one wide field "></div>
       <div class="three wide field ">
         <label>ชื่อ :</label>
       </div>
-      <div class="four wide field ">
-        <input type="text" placeholder="" [(ngModel)]="exciseName">
+      <div class="four wide field">
+        <input type="text" value="{{datas.exciseName}}">
       </div>
       <div class="three wide field ">
         <label>เลขบัตรประชาชน/เลขทะเบียนนิติบุคคล :</label>
       </div>
-      <div class="four wide field ">
-        <input type="text" placeholder="">
+      <div class="four wide field disabled input">
+        <input type="text">
       </div>
     </div>
 
@@ -36,8 +37,8 @@
       <div class="three wide field ">
         <label>เลขที่สาขาภาษีมูลค่าเพิ่ม (ถ้ามี) :</label>
       </div>
-      <div class="four wide field ">
-        <input type="text" placeholder="">
+      <div class="four wide field">
+        <input type="text">
       </div>
     </div>
 
@@ -52,14 +53,14 @@
       <div class="three  wide field ">
         <label>ขอนำสินค้าออกจาก :</label>
       </div>
-      <div class="four wide field ">
-        <input type="text" placeholder="">
+      <div class="four wide field">
+        <input type="text" value="{{datas.exciseName2}}">
       </div>
       <div class="three wide field ">
         <label>ทะเบียนสรรพสามิต :</label>
       </div>
-      <div class="four wide field ">
-        <input type="text" placeholder="">
+      <div class="four wide field">
+        <input type="text" value="{{datas.exciseId2}}">
       </div>
     </div>
 
@@ -68,8 +69,8 @@
       <div class="three wide field ">
         <label>เพื่อ :</label>
       </div>
-      <div class="four wide field ">
-        <input type="text" placeholder="">
+      <div class="four wide field">
+        <input type="text" value="{{exportType}}">
       </div>
     </div>
 
@@ -102,6 +103,9 @@
   <br>
   <div class="ui center aligned grid">
     <div class="four wide column">
+      <button class="ui mini button" (click)="onClickClear()">
+        ล้างผลการค้นหาทั้งหมด
+      </button>
       <button class="ui mini button" style="width: 100px;" (click)="onClickBack()">
         ย้อนกลับ
       </button>
@@ -113,46 +117,276 @@
 
 <div class="ui modal" id="ModalCheck" style="width: 90%;">
 
-  <div class="header">
-    Hello Modal!
+  <div class="header" style="background: #1e83db;color: white">
+    การตรวจปล่อยสินค้า
   </div>
 
   <div class="scrolling content" style="height: 600px !important;">
+
     <div class="ui form">
-
       <div class="ui grid">
         <!-- column 1 -->
-        <div class="eight wide column">
-          <p>Column 1</p>
+        <div class="eight wide field" style="text-align: center;">
+          <label>ข้อมูลการตามแบบคำขอยกเว้นหรือคืนภาษี (แบบเลขที่ {{datas.taxReNumber2}} ) :</label>
         </div>
-
         <!-- column 2 -->
-        <div class="eight wide column">
-          <p>Column 2</p>
+        <div class="eight wide field" style="text-align: center;">
+          <label>ข้อมูลการนำสินค้าออกจากโรงอุตสาหกรรม :</label>
+        </div>
+      </div>
+      <hr><br>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>ชื่อผุ้ส่งออก :</p>
+        </div>
+        <div class="four wide field">
+          <label>{{datas.exciseName}}</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>ชื่อผุ้ส่งออก :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.exciseName2">
         </div>
       </div>
 
-      <div class="ui grid">
+      <div class="inline fields">
         <!-- column 1 -->
-        <div class="eight wide column">
-          <p>Column 1</p>
+        <div class="three wide field">
+          <p>สำนักงานสรรพสามิตต้นทาง :</p>
         </div>
-
+        <div class="four wide field">
+          <label>{{datas.officeArea}}</label>
+        </div>
+        <div class="two wide field"></div>
         <!-- column 2 -->
-        <div class="eight wide column">
-          <p>Column 2</p>
+        <div class="three wide field">
+          <p>สำนักงานสรรพสามิตต้นทาง :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.officeArea">
         </div>
       </div>
 
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>ด่านส่งออกสินค้าปลายทาง :</p>
+        </div>
+        <div class="four wide field">
+          <label>สำนักงานสรรพสามิต {{datas.destination2}}</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>ด่านส่งออกสินค้าปลายทาง :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.destination2">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>สำนักงานสรรพสามิตปลายทาง :</p>
+        </div>
+        <div class="four wide field">
+          <label>สำนักงานสรรพสามิต {{datas.destination2}}</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>สำนักงานสรรพสามิตปลายทาง :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.destination2">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>วันที่นำสินค้าออก :</p>
+        </div>
+        <div class="four wide field">
+          <label>{{datas.dateOut2}}</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>วันที่นำสินค้าออก :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.dateOut2">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>ชนิดของสินค้า :</p>
+        </div>
+        <div class="four wide field">
+          <label>{{datas.productName2}}</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>ชนิดของสินค้า :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.productName2">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>ปริมาณของสินค้า :</p>
+        </div>
+        <div class="four wide field">
+          <label>{{datas.quantity}}</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>ปริมาณของสินค้า :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.quantity">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
+        </div>
+        <div class="four wide field">
+          <label>-</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.vehicleNo">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <!-- column 1 -->
+        <div class="three wide field">
+          <p>เส้นทางการขนส่ง :</p>
+        </div>
+        <div class="four wide field">
+          <label>-</label>
+        </div>
+        <div class="two wide field"></div>
+        <!-- column 2 -->
+        <div class="three wide field">
+          <p>เส้นทางการขนส่ง :</p>
+        </div>
+        <div class="four wide field">
+          <input type="text" [(ngModel)]="saveDatas.logisticWay">
+        </div>
+      </div>
+      <hr>
+      <br>
+
       <div class="ui grid">
         <!-- column 1 -->
-        <div class="eight wide column">
-          <p>Column 1</p>
+        <div class="eight wide field" style="text-align: center;">
+          <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
         </div>
-
         <!-- column 2 -->
-        <div class="eight wide column">
-          <p>Column 2</p>
+        <div class="eight wide field" style="text-align: center;">
+          <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
+        </div>
+      </div>
+      <br>
+
+      <div class="ui grid">
+        <div class="two column row">
+          <!-- column 1 Tax Stamp -->
+          <div class="column">
+
+            <div class="inline fields" *ngFor="let item of taxStampNo; let i = index">
+              <div class="two wide field">
+                <p>ดวงที่ {{i+1}}</p>
+              </div>
+              <div class="eight wide field">
+                <input type="text" [(ngModel)]="datas.stampName">
+              </div>
+              <div class="four wide field">
+                <button class="ui mini green button" (click)="addTaxField()">
+                  <i class="plus icon"></i>
+                  เพิ่ม
+                </button>
+                <button class="ui mini red button" (click)="delTaxField(i)">
+                  ลบ
+                </button>
+              </div>
+            </div>
+
+          </div>
+          <!-- column 2 Factory Stamp -->
+          <div class="column">
+
+            <div class="inline fields" *ngFor="let item of factoryStampNo; let i = index">
+              <div class="two wide field"></div>
+              <div class="two wide field">
+                <p>ดวงที่ {{i+1}}</p>
+              </div>
+              <div class="eight wide field">
+                <input type="text" [(ngModel)]="saveDatas.stampName">
+              </div>
+              <div class="four wide field">
+                <button class="ui mini green button" (click)="addFactoryField()">
+                  <i class="plus icon"></i>
+                  เพิ่ม
+                </button>
+                <button class="ui mini red button" (click)="delFactoryField(i)">
+                  ลบ
+                </button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <hr>
+      <br>
+
+      <!-- Radio Box -->
+      <div class="ui grid center aligned">
+        <div class="inline fields">
+          <label>ผลการตรวจ:</label>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="result" [(ngModel)]="datas.result" value="1">
+              <label>ผ่าน</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="result" [(ngModel)]="datas.result" value="0">
+              <label>ไม่ผ่าน</label>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Comment Box -->
+      <div class="ui grid center aligned">
+        <div class="fields">
+          <textarea rows="5" cols="100" [(ngModel)]="datas.remark"></textarea>
         </div>
       </div>
 
@@ -160,13 +394,13 @@
   </div>
 
   <div class="actions">
-    <div class="ui primary button">
+    <div class="ui primary button" (click)="onClickSave()">
       <i class="save icon"></i>
-      บันทึก
+      บันทึกข้อมูลการตรวจ
     </div>
     <div class="ui icon deny button">
       <i class="close icon"></i>
-      ยกเลิก
+      ยกเลิกการบันทึกข้อมูล
     </div>
   </div>
 
