--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
@@ -39,13 +39,15 @@
                 กำหนดเงื่อนไขความเสี่ยง
               </button>
               <button class="ui mini primary button" (click)="modalpercent()">
+                <i class="setting icon"></i>
                 กำหนดค่าร้อยละ
               </button>
-              <button class="ui mini primary button" (click)="ExportInfFull()">
+              <button class="ui mini yellow button" (click)="ExportInfFull()">
                 <i class="print icon"></i>
                 ส่งออก
               </button>
-              <button class="ui mini primary button" (click)="cancelFlow()">
+              <button class="ui mini  button" (click)="cancelFlow()">
+                <i class="remove icon"></i>
                 ยกเลิก
               </button>
            
